<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="login">Login</string>
    <string name="login_name">login name</string>
    <string name="password">Password</string>
    <string name="switchButton">What does this do?</string>
    <string name="checkbox">CheckBox</string>
    <string name="radiobutton">RadioButton</string>
    <string name="imageBtn">TODO</string>
    <string name="button">Login Button</string>
    <string name="dialog_message">Do you want to finish the activity?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_title">dialog window</string>
    <string name="switch_on">Switch is On</string>
    <string name="switch_off">Switch is Off</string>
    <string name="response_info">Here is my response</string>
    <string name="start_chat">Start Chat</string>
    <string name="send">Send</string>
    <string name="input_message">Please input message</string>
    <string name="select_image">Select image</string>
    <string name="no_camera">This device does not have a camera.</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="test_tool_bar">Test tool bar</string>
    <string name="pick_color">Do you want to go back?</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="curr_temp">Current temperature: </string>
    <string name="min_temp">Min temperature: </string>
    <string name="max_temp">Max temperature: </string>
    <string name="messageDetail">Message Here</string>
    <string name="messageID">ID=</string>
    <string name="deleteMessage">Delete this message </string>
</resources>
