<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/messageDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="right"
        android:text="@string/messageDetail" />

    <TextView
        android:id="@+id/messageId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/messageDetail"
        android:layout_alignParentStart="true"
        android:gravity="right"
        android:text="@string/messageID" />

    <Button
        android:id="@+id/deleteMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:text="@string/deleteMessage" />
</RelativeLayout>